<resources>
    <string name="app_name">星空影院</string>
    <string name="app_version_label">v1.0.89</string>
    <string name="about">关于</string>
    <string name="about_info">一些app信息</string>
    <string name="tmdb_api_key">50a2f49ef7814fbf42c95e92fa3f5cf5</string>
    <string name="account">账户</string>
    <string name="account_cancellation">注销账户</string>
    <string name="account_cancellation_tip">删除您的账户，您的账户将无法使用</string>
    <string name="account_info">账号部分管理</string>
    <string name="account_no_tip">没有账号？请下载手机版本进行注册，没有安卓设备可以尝试电脑使用模拟器进行操作</string>
    <string name="action_cancel">取消</string>
    <string name="action_confirm">确定</string>
    <string name="action_external_storage">External storage</string>
    <string name="action_open_doc">Open Document</string>
    <string name="action_open_doc_tree">Open Document Tree</string>
    <string name="action_open_url">打开链接</string>
    <string name="action_pick_file">Pick File</string>
    <string name="action_pick_file_old">Pick File (legacy)</string>
    <string name="action_playlist">Playlist</string>
    <string name="action_settings">Settings</string>
    <string name="action_toggle_filter">Toggle Filter</string>
    <string name="actor">演员</string>
    <string name="actor_text">演员以及工作人员</string>
    <string name="add">添加</string>
    <string name="add_date_to_the_last_episode">最后一集添加日期</string>
    <string name="add_subtitle_font">添加字体</string>
    <string name="add_subtitle_font_tip">从本地选择字体文件添加</string>
    <string name="add_to_play_list">添加到播放列表</string>
    <string name="add_tv_font">TV端字体</string>
    <string name="add_tv_font_tip">从TV端扫码导入字体</string>
    <string name="additional_parts">附加部分</string>
    <string name="additional_parts_tip">详情展示附加部分</string>
    <string name="address">地址（例如 127.0.0.1）</string>
    <string name="admin">管理员</string>
    <string name="admin_tip">可管理APP，拥有最高权限</string>
    <string name="advanced_menu">Advanced…</string>
    <string name="aes_error">同步密钥失败，请重启APP,或查看代理</string>
    <string name="ai_assisted_scraping">AI辅助刮削</string>
    <string name="ai_assisted_scraping_input_key">请输入自己的deepseek api key</string>
    <string name="ai_scraping_model">刮削模式</string>
    <string name="ai_scraping_model_tip">选择AI对刮削的干预程度</string>
    <string name="alist_text">AList</string>
    <string name="aliyun">阿里网盘</string>
    <string name="all">所有</string>
    <string name="all_movie">所有电影</string>
    <string name="all_show">所有剧集</string>
    <string name="already_see">已观看</string>
    <string name="androidx_compose_foundation_autofill">Autofill</string>
    <string name="androidx_compose_ui_autofill">Autofill</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_config_sync">APP配置同步</string>
    <string name="app_config_sync_tip">选择从云端同步配置或者上传当前配置</string>
    <string name="app_description">AfuseKt Recommended Videos</string>
    <string name="app_setting_info">一些app通用设置</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="as_actor">作为演员</string>
    <string name="as_director">作为导演</string>
    <string name="as_screenplay">作为编剧</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="assisted_intervention">辅助干预</string>
    <string name="audio">音频</string>
    <string name="audio_delay">Audio delay</string>
    <string name="audio_digital_title">数字音频输出 (直通)</string>
    <string name="audio_track_text">音轨</string>
    <string name="auto">自动</string>
    <string name="auto_download_danmaku">自动下载弹幕</string>
    <string name="auto_download_danmaku_tip">这里指同路径弹幕，规则与字幕规则一样，规则不匹配则无法自动下载</string>
    <string name="auto_download_subtitle">自动下载字幕</string>
    <string name="auto_download_subtitle_tip">自动为你下载同路径首个字幕</string>
    <string name="auto_ffmpeg">自动打开FFmpeg</string>
    <string name="auto_get_detail">自动获取详情</string>
    <string name="auto_jum">自动跳转</string>
    <string name="auto_jump_tip">开启后会自动跳转设置时长位置</string>
    <string name="auto_next">自动下一集</string>
    <string name="auto_next_tip">电视剧有效，默认开启</string>
    <string name="auto_shutdown">定时关闭</string>
    <string name="average_sort">按评分</string>
    <string name="back_exit_edit_mode">返回退出编辑模式</string>
    <string name="back_up">备注</string>
    <string name="back_up_drive">备份盘</string>
    <string name="banner_loop_time">轮播切换时间</string>
    <string name="banner_lower_quality">banner_lower_quality</string>
    <string name="banner_page_transformer">轮播切换方式</string>
    <string name="banner_page_transformer_tip">图片与图片切换的样式</string>
    <string name="banner_show_overview">轮播展示介绍</string>
    <string name="banner_show_overview_tip">关闭后，轮播将不展示影视简介介绍</string>
    <string name="banner_source">轮播数据源</string>
    <string name="banner_source_come_tip">选择首页轮播数据源，暂时仅为本地库首页生效</string>
    <string name="blur_home">首页背景模糊</string>
    <string name="bottom_danmu_lines">底部弹幕行数</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brightness">brightness</string>
    <string name="btn_minus">-</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_play">Play</string>
    <string name="btn_plus">+</string>
    <string name="build_libvlc_revision">7cd0c15</string>
    <string name="build_vlc_revision">74c4d91ccb</string>
    <string name="bullet_chat">弹幕</string>
    <string name="bullet_chat_tip">设置弹幕</string>
    <string name="cacheMegs">视频缓存大小:</string>
    <string name="cancel_collection">取消收藏</string>
    <string name="cancel_text">取消</string>
    <string name="cat_extended_fab_content_desc">cat_extended_fab_content_desc</string>
    <string name="category_text">分类</string>
    <string name="change_email_title">修改邮箱</string>
    <string name="channel_id">afusekt_channel</string>
    <string name="chapter_button">Chapter</string>
    <string name="chapters">章节</string>
    <string name="check_lan">自动检测局域网</string>
    <string name="check_lan_tip">开启后将自动检测备用地址是否存在局域网地址，如果有且设备已连接wifi将拥有最高优先级，这会忽略你手动开启的备用线路</string>
    <string name="checking">正在检查</string>
    <string name="chinese_bilingual">繁体中文</string>
    <string name="chinese_simplified">简体中文</string>
    <string name="chinese_traditional">中英文</string>
    <string name="clean_history">清理记录</string>
    <string name="clean_history_tip">此操作将会删除所有播放记录（仅本地）</string>
    <string name="clear_cache">清理缓存</string>
    <string name="clear_cache_tip">此操作将会删除所有视频配置与字幕</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">收起</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="close_text">关闭</string>
    <string name="code_no">强制服务不转码</string>
    <string name="code_no_tip">开启后无论服务是否开启转码，都将获取源文件播放</string>
    <string name="codec">编解码器</string>
    <string name="collection">按收藏</string>
    <string name="collection_display">集合展示</string>
    <string name="collection_text">收藏</string>
    <string name="color_set_success">设置成功，需要重启APP生效</string>
    <string name="column_display">栏目展示</string>
    <string name="res_0x7f1300ae_com_google_firebase_crashlytics_mapping_file_id">bee73d31314b4c8d8d42c40d02306d47</string>
    <string name="res_0x7f1300af_com_google_firebase_crashlytics_version_control_info">repositories {\n  system: GIT\n  local_root_path: \"$PROJECT_DIR\"\n  revision: \"529cc38e1aa7a3f4726017f36afa14a2478092ae\"\n}\n</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="compilation">合集</string>
    <string name="connect_tip">请使用其他设备连接获取数据</string>
    <string name="content_can_t_empty">该内容必需填写</string>
    <string name="continue_play">继续</string>
    <string name="continue_watching">继续观看吧</string>
    <string name="contrast">Contrast</string>
    <string name="copy_text">复制</string>
    <string name="cover_config_subtitle">以下配置需重启生效</string>
    <string name="cover_rating">封面评分</string>
    <string name="cover_size">封面大小</string>
    <string name="currency">通用</string>
    <string name="current_number">当前项目数:</string>
    <string name="custom">自定义</string>
    <string name="dammu_padding">弹幕间距</string>
    <string name="dan_dan_first">弹弹Play YYDS</string>
    <string name="dan_dan_first_tip">播放动漫时首次匹配强制优先弹弹play</string>
    <string name="danmaku_api">弹幕API</string>
    <string name="danmaku_api_tip">自定义弹幕API来实现自己的弹幕库</string>
    <string name="danmaku_match">从 %1$s 匹配到 %2$d 条弹幕</string>
    <string name="danmu_count_limit">弹幕数量限制</string>
    <string name="danmu_count_limit_switch">限制弹幕数量</string>
    <string name="danmu_count_limit_switch_tip">开始起后，将随机去除至剩余数量</string>
    <string name="danmu_lines">弹幕行数</string>
    <string name="danmu_search_row_episodes">共%1$d话</string>
    <string name="danmu_size">弹幕大小</string>
    <string name="danmu_speed">弹幕速度</string>
    <string name="danmu_tips">打开后可展示弹幕，长按可以可以自行选择弹幕</string>
    <string name="danmu_tran">弹幕透明度</string>
    <string name="danmuapi">弹幕API</string>
    <string name="dark_model">黑暗模式</string>
    <string name="data_range">下一页数据过多</string>
    <string name="data_sync">数据传输</string>
    <string name="data_sync_tip">传输本地库中影视信息到其他设备</string>
    <string name="data_trans_tip">资源库需通过云端同步</string>
    <string name="decode_type">decode_type</string>
    <string name="decode_type_auto">Auto</string>
    <string name="decode_type_hw">HW</string>
    <string name="decode_type_hw_plus">HW+</string>
    <string name="decode_type_sw">SW</string>
    <string name="decoder_error">无法解码</string>
    <string name="deepseek_scraping">Deepseek 刮削</string>
    <string name="deepseek_scraping_tip">Deepseek 辅助刮削，目前最佳适配115，注意目前只会帮助刮削其他内容</string>
    <string name="default_error_message">Invalid input</string>
    <string name="default_notification_channel_name">Now playing</string>
    <string name="default_popup_window_title">Pop-Up Window</string>
    <string name="default_show_danmaku">弹幕默认打开</string>
    <string name="default_show_danmaku_tip">进入播放弹幕自动打开</string>
    <string name="define_zxingandroidembedded" />
    <string name="delete">删除</string>
    <string name="delete_font">删除字体</string>
    <string name="delete_font_confirm">确定要删除字体</string>
    <string name="delete_font_mode">删除模式</string>
    <string name="delete_font_mode_tip">开启后点击字体可删除</string>
    <string name="delete_history">删除历史</string>
    <string name="delete_history_ej">从播放历史移除</string>
    <string name="delete_text">删除</string>
    <string name="detail">详情</string>
    <string name="determined_by_service">由服务决定</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete">确认删除吗？</string>
    <string name="dialog_delete_movie_tips">确认删除该电影吗？</string>
    <string name="dialog_delete_show_tips">确认删除吗</string>
    <string name="dialog_delete_video_source">确认删除该资源库吗，将会删除所有本地关于此库的资源</string>
    <string name="dialog_next">Next</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_prev">Prev</string>
    <string name="dialog_reset">Reset</string>
    <string name="intro_end_video_time">片头结束时间</string>
    <string name="intro_start_video_time">片头开始时间</string>
    <string name="sub_delay">字幕延迟:</string>
    <string name="sub_pos">字幕位置:</string>
    <string name="sub_scale">字幕大小:</string>
    <string name="video_end_time">跳过片尾时长</string>
</resources>