<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setBox"
    android:background="#80000000"
    android:visibility="gone"
    android:layout_width="460dp"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/sub_pos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="#ffffff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_pos"/>
                    <TextView
                        android:id="@+id/sub_pos_value_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <com.google.android.material.slider.Slider
                    android:value="0.08"
                    android:id="@+id/sub_pos_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="0.01"
                    android:valueFrom="0"
                    android:valueTo="1"
                    app:thumbColor="@color/slider_thumb_color" app:thumbRadius="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/sub_scale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sub_pos">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="#ffffff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_scale"/>
                    <TextView
                        android:textColor="#ffffff"
                        android:id="@+id/sub_scale_value_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <com.google.android.material.slider.Slider
                    android:id="@+id/sub_scale_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="1"
                    android:valueFrom="1"
                    android:valueTo="100"
                    app:thumbColor="@color/slider_thumb_color" app:thumbRadius="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/sub_delay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sub_pos">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="#ffffff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_delay"/>
                    <TextView
                        android:textColor="#ffffff"
                        android:id="@+id/sub_delay_value_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <com.google.android.material.slider.Slider
                    android:value="0"
                    android:id="@+id/sub_delay_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="1"
                    android:valueFrom="-60"
                    android:valueTo="60"
                    app:thumbColor="@color/slider_thumb_color" app:thumbRadius="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sub_pos">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="#ffffff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/danmu_size"/>
                </LinearLayout>
                <com.google.android.material.slider.Slider
                    android:value="100"
                    android:id="@+id/danmu_size"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="10"
                    android:valueFrom="0"
                    android:valueTo="300" app:thumbColor="@color/slider_thumb_color" app:thumbRadius="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sub_pos">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="#ffffff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/danmu_speed"/>
                </LinearLayout>
                <com.google.android.material.slider.Slider
                    android:value="2"
                    android:id="@+id/danmu_speed"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="0.5"
                    android:valueFrom="1"
                    android:valueTo="5" app:thumbColor="@color/slider_thumb_color" app:thumbRadius="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="#ffffff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/danmu_lines"/>
                <com.google.android.material.slider.Slider
                    android:value="4"
                    android:id="@+id/danmu_lines"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="1"
                    android:valueFrom="1"
                    android:valueTo="10" app:thumbColor="@color/slider_thumb_color" app:thumbRadius="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="#ffffff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/danmu_tran"/>
                <com.google.android.material.slider.Slider
                    android:value="1"
                    android:id="@+id/dan_alpha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="0.1"
                    android:valueFrom="0"
                    android:valueTo="1" app:thumbColor="@color/slider_thumb_color" app:thumbRadius="10dp"/>
            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/introStartVideoTime"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/activity_vertical_margin"
                app:layout_constraintTop_toBottomOf="@+id/media_select">
                <LinearLayout
                    android:gravity="start"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <TextView
                        android:textSize="12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="片头可点击标题可获取当前时间为片头,如果获取的值超过进度条最大值，进度条将不会显示当前所选择的进度"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="#ffffff"
                        android:id="@+id/intro_start_time_title"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/intro_start_video_time"/>
                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp">
                        <com.google.android.material.slider.Slider
                            android:id="@+id/intro_start_time"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:stepSize="1"
                            android:layout_weight="1"
                            android:valueFrom="0"
                            android:valueTo="300" app:thumbColor="@color/slider_thumb_color" app:thumbRadius="10dp"/>
                        <TextView
                            android:id="@+id/intro_start_time_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/introEndVideoTime"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/activity_vertical_margin"
                app:layout_constraintTop_toBottomOf="@+id/media_select">
                <LinearLayout
                    android:gravity="start"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <com.google.android.material.textview.MaterialTextView
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="#ffffff"
                        android:id="@+id/intro_end_time_title"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/intro_end_video_time"/>
                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp">
                        <com.google.android.material.slider.Slider
                            android:id="@+id/intro_end_time"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:stepSize="1"
                            android:layout_weight="1"
                            android:valueFrom="0"
                            android:valueTo="300" app:thumbColor="@color/slider_thumb_color" app:thumbRadius="10dp"/>
                        <TextView
                            android:id="@+id/intro_end_time_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/endVideoTime"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/activity_vertical_margin"
                app:layout_constraintTop_toBottomOf="@+id/media_select">
                <LinearLayout
                    android:gravity="start"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <com.google.android.material.textview.MaterialTextView
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="#ffffff"
                        android:id="@+id/end_time_title"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/video_end_time"/>
                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp">
                        <com.google.android.material.slider.Slider
                            android:id="@+id/end_time"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:stepSize="1"
                            android:layout_weight="1"
                            android:valueFrom="0"
                            android:valueTo="300" app:thumbColor="@color/slider_thumb_color" app:thumbRadius="10dp"/>
                        <TextView
                            android:id="@+id/end_time_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
